--- a/style.css
+++ b/style.css
@@ -330,31 +330,7 @@ input, textarea {
 }
 
 /* mobile mode............/// */
-@media (max-width: 1240px) {
-  .contents-item {
-    padding-left: 16%;
-    padding-bottom: 5%;
-  }
-  .contents-item img {
-    width: 130%;
-  }
-  .contents-item p {
-    font-size: 20px;
-    margin-top: 15px;
-  }
-  .popup_box{
-    top: 170%;
-  }
-  .contact-form {
-    margin-top: 550px;
-  }
-}
-@media (max-width: 1150px) {
-  .contents-item {
-    padding-left: 12.5%;
-  }
-}
-@media (max-width: 1035px) {
+@media (max-width: 992px) {
   .img-warteg {
     width: 53%;
     padding: 10px 0px 0px 30px;
@@ -366,7 +342,7 @@ input, textarea {
     float: right;
   }
   .contents-item {
-    padding-left: 15%;
+    padding-left: 13%;
     padding-bottom: 5%;
   }
   .contents-item img {
@@ -377,10 +353,13 @@ input, textarea {
     margin-top: 15px;
   }
   .popup_box{
-    top: 170%;
+    top: 130%;
   }
   .contact-form {
     margin-top: 400px;
+  }
+  .contact-form .diatas-send {
+    font-size: 10px;
   }
   .menu-button-container {
     margin-top: 30;
@@ -437,311 +416,22 @@ input, textarea {
   .menu > li:not(:last-child) {
     border-bottom: 1px solid #444;
   }
-}
-
-@media (max-width: 964px) {
-  .menu-button-container {
-    left: 47%;
-  }  
-  .contents-item {
-    padding-left: 12%;
-    padding-bottom: 5%;
-  }
-  .contact-form p {
-    font-size: 15px;
-  }
-  input, textarea {
-    font-size: 12px;
-  }
-}
-
-@media (max-width: 905px) {
-  .menu-button-container {
-    left: 44%;
-  }  
-  .contents-item {
-    padding-left: 11%;
-    padding-bottom: 5%;
-  }
-  .copy-container h1 {
-    font-size: 130px;
-  }
-  .contact-form p {
-    font-size: 15px;
-  }
-  input, textarea {
-    font-size: 12px;
-  }
-}
-
-@media (max-width: 857px) {
-  .menu-button-container {
-    left: 40%;
-  }  
-  .contents-item {
-    padding-left: 9%;
-    padding-bottom: 5%;
-  }
-  .contact-form p {
-    font-size: 15px;
-  }
-  input, textarea {
-    font-size: 12px;
-  }
-}
-
-@media (max-width: 810px) {
-  .menu-button-container {
-    left: 37%;
-  }  
-  .contents-item {
-    padding-left: 7%;
-    padding-bottom: 5%;
-  }
-  .copy-container h1 {
-    font-size: 120px;
-  }
-  .img-warteg {
-    padding: 10px 0px 0px 10px;
-  }
-}
-
-@media (max-width: 790px) {
-  .menu-button-container {
-    left: 35%;
-  }  
-  .contents-item {
-    padding-left: 7%;
-  }
-  .img-warteg {
-    display: none;
-    /*padding: 10px 0px 0px 30px;*/
-  }
-  .contact-form {
-    margin-top: 350px;
-  }
-  .menu {
-    width: 99.75%;
-  }
-}
-
-@media (max-width: 740px) {
-  .menu-button-container {
-    left: 30%;
-  }  
-  .contents-item {
-    padding-left: 4.5%;
-  }
-  .copy-container h1 {
-    font-size: 100px;
-  }
-}
-
-@media (max-width: 740px) {
-  .menu-button-container {
-    left: 30%;
-  }  
-  .contents-item {
-    padding-left: 4.5%;
-  }
-  .copy-container h1 {
-    font-size: 100px;
-  }
-}
-
-@media (max-width: 687px) {
-  .menu-button-container {
-    left: 25%;
-  }  
-  .contents-item {
-    padding-left: 2%;
-  }
-  .contents-item img {
-    width: 80%;
-  }
-  .copy-container h1 {
-    font-size: 90px;
-  }
-  .contact-form {
-    margin-top: 250px;
-  }
-}
-
-@media (max-width: 648px) {
-  .menu-button-container {
-    left: 20%;
-  }  
-  .contents-item {
-    padding-left: 11%;
-  }
-  .contents-item img {
-    width: 150%;
-  }
-  .contents-item p {
-    font-size: 130%;
-    padding-left: 50%;
-  }
-  .contact-form {
-    margin-top: 1800px;
-  }
-  .copyright h5, .copyright p {
-    font-size: 11px;
-  }
-  .popup_box {
-    width: 50%;
-  }
-  .popup_box1 {
-    top: 178%;
-  }
-  .popup_box2 {
-    top: 230%;
-  }
-  .popup_box3 {
-    top: 290%;
-  }
-  .popup_box4 {
-    top: 343%;
-  }
-}
-
-@media (max-width: 600px) {
-  .menu-button-container {
-    left: 13%;
-  }  
-  .menu {
-    width: 99.6%;
-  }
-  .copy-container h1 {
-    font-size: 70px;
-  }
-  .contents-item {
-    padding-left: 7%;
-  }
-  .contents-item img {
-    width: 150%;
-  }
-  .contents-item p {
-    font-size: 130%;
-    padding-left: 50%;
-  }
-  .contact-form {
-    margin-top: 1780px;
-  }
-  .contact-form p {
-    font-size: 15px;
-  }
-  input, textarea {
-    width: 300px;
-    font-size: 12px;
-  }
-  .copyright h5, .copyright p {
-    font-size: 10px;
-  }
-  .popup_box {
-    width: 50%;
-  }
-  .popup_box1 {
-    top: 178%;
-  }
-  .popup_box2 {
-    top: 230%;
-  }
-  .popup_box3 {
-    top: 290%;
-  }
-  .popup_box4 {
-    top: 343%;
-  }
   .footer {
-    height: 90px;
-    padding: 40px 40px 0px 40px;
-  }
-  .footer-logo {
-    width: 50%;
-  }
-  .footer-list {
-    font-size: 10px;
-  }
-  .copyright {
-    padding: 30px 0px 50px 0px;
-  }
-}
-
-@media (max-width: 550px) {
-  .menu-button-container {
-    left: 7%;
-  }  
-  .copy-container p {
-    font-size: 20px;
-  }
-  .contents-item {
-    padding-left: 8%;
-  }
-  .contents-item img {
-    width: 130%;
-  }
-  .contents-item p {
-    font-size: 130%;
-    padding-left: 30%;
-  }
-  .popup_box3 {
-    top: 280%;
-  }
-  .popup_box4 {
-    top: 330%;
-  }
-  .contact-form {
-    margin-top: 1400px;
-  }
-  .footer {
-    height: 80px;
+    height: 0px;
+    padding: 0px;
   }
   .footer-list {
     display: none;
   }
   .footer-logo {
+    padding-bottom: 35px;
+    padding-top: 20px;
     display: block;
     width: 60%;
     margin-left: 33%;
     margin-right: auto;
   }
-}
-
-@media (max-width: 520px) {
-  .menu-button-container {
-    left: 1%;
-  }  
-  .copy-container h1 {
-    font-size: 50px;
-  }
-  .contents-item {
-    padding-left: 5%;
-  }
-  .popup_box1 {
-    top: 150%;
-  }
-  .popup_box2 {
-    top: 190%;
-  }
-  .popup_box3 {
-    top: 250%;
-  }
-  .popup_box4 {
-    top: 295%;
-  }
-  .footer-logo {
-    display: block;
-    width: 60%;
-    margin-left: 30%;
-    margin-right: auto;
-  }
-}
-
-@media (max-width: 500px) {
-  .menu-button-container {
-    left: -5%;
-  }  
-  .contents-item {
-    padding-left: 2%;
+  .copyright {
+    height: 210px;
   }
 }
