--- a/style.css
+++ b/style.css
@@ -387,15 +387,18 @@ input, textarea {
     visibility: hidden;
   }
   .menu li a {
-    transition: 0.8s;
+    transition: 0s;
     color: #1f3042;
+    font-size: 30px;
+    width: 100%;
+    text-align: center;
   }
   .menu li a:hover {
     background-color: transparent;
   }
   #menu-toggle:checked ~ .menu li {
     border: 1px solid #333;
-    height: 2.5em;
+    height: 3.5em;
     padding: 1em 0em 1em 0em;
     text-align: center;
     visibility: visible;
